Avg heart rate + dummy charts

--- a/lib/gadgetbridge_visualizer_web/templates/layout/root.html.heex
+++ b/lib/gadgetbridge_visualizer_web/templates/layout/root.html.heex
@@ -102,67 +102,58 @@
     <aside class="aside is-placed-left is-expanded">
       <div class="aside-tools">
         <div class="aside-tools-label">
-          <span><b>Admin</b> One HTML</span>
+          <span><b>Gadgetbridge</b> Visualizer</span>
         </div>
       </div>
       <div class="menu is-menu-main">
-        <p class="menu-label">General</p>
+        <p class="menu-label">Charts</p>
         <ul class="menu-list">
           <li>
             <a href="index.html" class="is-active router-link-active has-icon">
               <span class="icon"><i class="mdi mdi-desktop-mac"></i></span>
-              <span class="menu-item-label">Dashboard</span>
+              <span class="menu-item-label">Overview</span>
             </a>
           </li>
         </ul>
-        <p class="menu-label">Examples</p>
+        <p class="menu-label">Detailed Charts</p>
         <ul class="menu-list">
           <li>
             <a href="tables.html" class="has-icon">
-              <span class="icon has-update-mark"><i class="mdi mdi-table"></i></span>
-              <span class="menu-item-label">Tables</span>
+              <span class="icon has-update-mark"><i class="mdi mdi-heart-pulse"></i></span>
+              <span class="menu-item-label">Heart Rate</span>
             </a>
           </li>
           <li>
             <a href="forms.html" class="has-icon">
-              <span class="icon"><i class="mdi mdi-square-edit-outline"></i></span>
-              <span class="menu-item-label">Forms</span>
+              <span class="icon"><i class="mdi mdi-sleep"></i></span>
+              <span class="menu-item-label">Sleep</span>
             </a>
           </li>
           <li>
             <a href="profile.html" class="has-icon">
-              <span class="icon"><i class="mdi mdi-account-circle"></i></span>
-              <span class="menu-item-label">Profile</span>
+              <span class="icon"><i class="mdi mdi-arm-flex"></i></span>
+              <span class="menu-item-label">Activity</span>
             </a>
-          </li>
-          <li>
-            <a class="has-icon has-dropdown-icon">
-              <span class="icon"><i class="mdi mdi-view-list"></i></span>
-              <span class="menu-item-label">Submenus</span>
-              <div class="dropdown-icon">
-                <span class="icon"><i class="mdi mdi-plus"></i></span>
-              </div>
-            </a>
-            <ul>
-              <li>
-                <a href="#void">
-                  <span>Sub-item One</span>
-                </a>
-              </li>
-              <li>
-                <a href="#void">
-                  <span>Sub-item Two</span>
-                </a>
-              </li>
-            </ul>
           </li>
         </ul>
         <p class="menu-label">About</p>
         <ul class="menu-list">
           <li>
-            <a href="https://github.com/vikdiesel/admin-one-bulma-dashboard" target="_blank" class="has-icon">
+            <a href="https://github.com/mpope9/gadgetbridge_visualizer" target="_blank" class="has-icon">
               <span class="icon"><i class="mdi mdi-github-circle"></i></span>
-              <span class="menu-item-label">GitHub</span>
+              <span class="menu-item-label">Source</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/vikdiesel/admin-one-bulma-dashboard" target="_blank" class="has-icon">
+              <span class="icon"><i class="mdi mdi-code-tags"></i></span>
+              <span class="menu-item-label">Theme</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://codeberg.org/Freeyourgadget/Gadgetbridge" target="_blank" class="has-icon">
+              <span class="icon"><i class="mdi mdi-cellphone"></i></span>
+              <span class="menu-item-label">Gadgetbridge</span>
             </a>
           </li>
           <li>
