--- a/lib/gadgetbridge_visualizer_web/templates/page/index.html.heex
+++ b/lib/gadgetbridge_visualizer_web/templates/page/index.html.heex
@@ -1,4 +1,116 @@
-<section class="phx-hero">
-  <p>Hello, world!</p>
+<section class="section is-main-section">
+  <div class="tile is-ancestor">
+    <div class="tile is-parent">
+      <div class="card tile is-child">
+        <div class="card-content">
+          <div class="level is-mobile">
+            <div class="level-item">
+              <div class="is-widget-label"><h3 class="subtitle is-spaced">
+                  Avg Heart Rate
+                </h3>
+                <h1 class="title">
+                  <%= @conn.assigns.avg_heart_rate %> bpm
+                </h1>
+              </div>
+            </div>
+            <div class="level-item has-widget-icon">
+              <div class="is-widget-icon"><span class="icon has-text-danger is-large">
+                  <i class="mdi mdi-heart-pulse mdi-48px"></i></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tile is-parent">
+      <div class="card tile is-child">
+        <div class="card-content">
+          <div class="level is-mobile">
+            <div class="level-item">
+              <div class="is-widget-label"><h3 class="subtitle is-spaced">
+                  Total Sleep
+                </h3>
+                <h1 class="title">
+                  5hrs 10mins
+                </h1>
+              </div>
+            </div>
+            <div class="level-item has-widget-icon">
+              <div class="is-widget-icon"><span class="icon has-text-info is-large">
+                  <i class="mdi mdi-sleep mdi-48px"></i></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tile is-parent">
+      <div class="card tile is-child">
+        <div class="card-content">
+          <div class="level is-mobile">
+            <div class="level-item">
+              <div class="is-widget-label"><h3 class="subtitle is-spaced">
+                  Steps
+                </h3>
+                <h1 class="title">
+                  500 Steps
+                </h1>
+              </div>
+            </div>
+            <div class="level-item has-widget-icon">
+              <div class="is-widget-icon"><span class="icon has-text-success is-large">
+                  <i class="mdi mdi-walk mdi-48px"></i></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="columns">
+    <div class="column">
+      <div class="card">
+        <header class="card-header">
+          <p class="card-header-title">
+          <span class="icon"><i class="mdi mdi-finance"></i></span>
+          Heart Rate
+          </p>
+          <a href="#" class="card-header-icon">
+            <span class="icon"><i class="mdi mdi-reload"></i></span>
+          </a>
+        </header>
+        <div class="card-content">
+          <div class="chart-area">
+            <div style="height: 100%;">
+              <div id="heart-rate-chart" style="height: 400px; width: 100%">
+                <!-- TODO: ECHARTS -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <header class="card-header">
+          <p class="card-header-title">
+          <span class="icon"><i class="mdi mdi-sleep"></i></span>
+          Sleep Breakdown
+          </p>
+          <a href="#" class="card-header-icon">
+            <span class="icon"><i class="mdi mdi-reload"></i></span>
+          </a>
+        </header>
+        <div class="card-content">
+          <div class="chart-area">
+            <div style="height: 100%;">
+              <div id="sleep-chart" style="height: 400px; width: 100%">
+                <!-- TODO: ECHARTS -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
-
