adjusting chart columns

--- a/lib/gadgetbridge_visualizer_web/templates/page/index.html.heex
+++ b/lib/gadgetbridge_visualizer_web/templates/page/index.html.heex
@@ -82,7 +82,7 @@
         <div class="card-content">
           <div class="chart-area">
             <div style="height: 100%;">
-              <div id="heart-rate-chart" style="height: 400px; width: 100%">
+              <div id="heart-rate-chart" style="height: 400px;">
                 <!-- TODO: ECHARTS -->
               </div>
             </div>
@@ -104,7 +104,7 @@
         <div class="card-content">
           <div class="chart-area">
             <div style="height: 100%;">
-              <div id="sleep-chart" style="height: 400px; width: 100%">
+              <div id="sleep-chart" style="height: 400px;">
                 <!-- TODO: ECHARTS -->
               </div>
             </div>
