--- a/lib/gadgetbridge_visualizer_web/templates/layout/root.html.heex
+++ b/lib/gadgetbridge_visualizer_web/templates/layout/root.html.heex
@@ -20,9 +20,6 @@
         <a class="navbar-item is-hidden-desktop jb-aside-mobile-toggle">
           <span class="icon"><i class="mdi mdi-forwardburger mdi-24px"></i></span>
         </a>
-        <div class="navbar-item has-control">
-          <div class="control"><input placeholder="Search everywhere..." class="input"></div>
-        </div>
       </div>
       <div class="navbar-brand is-right">
         <a class="navbar-item is-hidden-desktop jb-navbar-menu-toggle" data-target="navbar-menu">
@@ -123,7 +120,7 @@
             </a>
           </li>
           <li>
-            <a href="forms.html" class="has-icon">
+            <a href={Routes.static_path(@conn, "/sleep")} class={@conn.assigns[:sleep_active]}>
               <span class="icon"><i class="mdi mdi-sleep"></i></span>
               <span class="menu-item-label">Sleep</span>
             </a>
