--- a/lib/gadgetbridge_visualizer_web/templates/heart/index.html.heex
+++ b/lib/gadgetbridge_visualizer_web/templates/heart/index.html.heex
@@ -1,8 +1,3 @@
-<script>
-  window.heartRateChartData = <%= @conn.assigns.heart_rate_data %>;
-  window.heartRateChartLabels = <%= raw(@conn.assigns.heart_rate_labels) %>;
-</script>
-
 <section class="section is-main-section">
   <div class="tile is-ancestor">
     <div class="tile is-parent">
@@ -43,7 +38,7 @@
             <div class="level-item has-widget-icon">
               <div class="is-widget-icon">
                 <span class="icon has-text-danger is-large">
-                  <i class="mdi mdi-heart mdi-48px"></i>
+                  <i class="mdi mdi-heart-pulse mdi-48px"></i>
                 </span>
               </div>
             </div>
@@ -66,7 +61,7 @@
             <div class="level-item has-widget-icon">
               <div class="is-widget-icon">
                 <span class="icon has-text-success is-large">
-                  <i class="mdi mdi-heart mdi-48px"></i>
+                  <i class="mdi mdi-heart-pulse mdi-48px"></i>
                 </span>
               </div>
             </div>
@@ -89,11 +84,16 @@
     <div class="card-content">
       <div class="chart-area">
         <div style="height: 100%;">
-          <div id="heart-rate-chart" style="height: 400px;">
+          <div id="heart-rate-chart" style="height: 550px;">
           </div>
         </div>
       </div>
     </div>
   </div>
-
 </section> 
+
+<script type="text/javascript">
+  let heartRateChartData = <%= @conn.assigns.heart_rate_data %>;
+  let heartRateChartLabels = <%= raw(@conn.assigns.heart_rate_labels) %>;
+  drawHeartRateChart(heartRateChartData, heartRateChartLabels);
+</script>
