--- a/lib/gadgetbridge_visualizer_web/templates/page/index.html.heex
+++ b/lib/gadgetbridge_visualizer_web/templates/page/index.html.heex
@@ -1,8 +1,3 @@
-<script>
-  window.heartRateChartData = <%= @conn.assigns.heart_rate_data %>;
-  window.heartRateChartLabels = <%= raw(@conn.assigns.heart_rate_labels) %>;
-</script>
-
 <section class="section is-main-section">
   <div class="tile is-ancestor">
     <div class="tile is-parent">
@@ -118,3 +113,10 @@
     </div>
   </div>
 </section>
+
+<script>
+  sleepChart();
+  let heartRateChartData = <%= @conn.assigns.heart_rate_data %>;
+  let heartRateChartLabels = <%= raw(@conn.assigns.heart_rate_labels) %>;
+  drawHeartRateChart(heartRateChartData, heartRateChartLabels);
+</script>
