--- a/lib/gadgetbridge_visualizer_web/templates/layout/root.html.heex
+++ b/lib/gadgetbridge_visualizer_web/templates/layout/root.html.heex
@@ -183,7 +183,7 @@
             </div>
             <div class="level-item">
               <div class="is-right">
-                <input type="date" id="date_start" name="date_start" value={@conn.assigns.date_start}>
+                <input type="date" id="date_start" name="date_start" value={@conn.assigns.date_start} />
               </div>
             </div>
             <div class="level-item">
@@ -193,7 +193,7 @@
             </div>
             <div class="level-item">
               <div class="is-right">
-                <input type="date" id="date_end" name="date_end" value={@conn.assigns.date_end}>
+                <input type="date" id="date_end" name="date_end" value={@conn.assigns.date_end} />
               </div>
             </div>
             <div class="level-item">
