--- a/assets/css/_theme-default.scss
+++ b/assets/css/_theme-default.scss
@@ -13,7 +13,11 @@ $base-color: #2e323a;
 $base-color-light: rgba(24, 28, 33, .06);
 
 /* General overrides */
-$primary: $turquoise;
+$primary: #ffa600;
+$danger: #ff6361;
+$warning: #ffa600;
+$info: #58508d;
+$success: #bc5090;
 $body-background-color: #f8f8f8;
 $link: $blue;
 $link-visited: $purple;
